--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2022 |<a href="https://www.dio.me/certificate/B25ACD6B/share" target="_blank"> Desafio DIO: Recriando a página inicial do Instagram</a></p>
+        <p>Direitos de imagem para Instagram, afinal a ideia do projeto era refazer a tela de login <span role="img" aria-label="coração">❤️</span></p>
+        <p>Desenvolvido por: <a href="https://victor99dev.site/" target="_blank">Victor Hugo - Victordev99</a></p>
+    </footer>
 </body>
 </html>
